--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ventura</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/default.css">
+
 </head>
 <body>
 
@@ -15,7 +17,7 @@
         <div id="about">
 
         </div>
-
+        <p>Good</p>
         <div id="contact"></div>
 
 
