--- a/html/index.html
+++ b/html/index.html
@@ -16,6 +16,12 @@
 <body>
 <header>
     <h1 class="count"></h1>
+
+    
+    <input type="checkbox" name="">
+     
+    <input type="submit" value="">
+
 </header>
 <nav class="navbar"></nav>
 <main>
